# guten_split

./: .env.example  .gitaliases  .gitignore  CLAUDE.md  Cargo.toml  DIALOG-OPEN-WHITESPACE-REQUIREMENT.md  GEMINI.md  NOTE-Debug.md  PRD.md  README.md  REFACTOR_REGEX.md  SEAMS-Design.md  TODO_FEATURES.md  build.rs.disabled  dialog_patterns.toml  dictionary-abbreviation-strategy-test_17.stevejs_checkpoint.md  find_diff.sh  foo.md  rust-toolchain.toml  sentence_comparison.rs  sentence_detection_comparison.txt  test_dialog_bug.rs
benches/: cache_removal_bench.rs  detector_instantiation_bench.rs  dfa_comparison_bench.rs  file_by_file_bench.rs  parallel_cli_bench.rs  reader_bench.rs  sentence_detector_bench.rs
benchmarks/: README.md  performance-results.md  pyproject.toml  python_nupunkt_benchmark.py  python_pysbd_benchmark.py  python_spacy_benchmark.py  run_comparison.py  setup_benchmarks.sh
completed_tasks/: DIAG.md  abbreviation-detection-exploration_14.stevejs.md  align-nupunkt-benchmark-output_73.stevejs.md  benchmark-cleanup-post-discovery-optimization_63.stevejs.md  benchmark-data-transparency_24.stevejs.md  benchmark-file-count-discrepancy_72.stevejs.md  benchmark-implementation-audit_25.stevejs.md  benchmark-mmap-feature-removal_48.stevejs.md  benchmark-performance-regression-investigation_22.stevejs.md  cleanup-warnings-post-cache-removal_61.stevejs.md  cli-debug-convenience_91.steve.md  cli-incremental-api-adoption_46.stevejs.md  comprehensive-implementation-reality-check_36.stevejs.md  comprehensive-state-assessment-and-validation_23.stevejs.md  context-compaction-analysis_7.md  dead-code-cleanup-elimination_40.stevejs.md  debug-state-tracking_89.steve.md  dialog-algorithm-focus-and-abbreviation-integration_29.stevejs.md  dialog-coalescing-hard-sep-rejection_33.stevejs.md  dialog-comma-capital-continuation_92.steve.md  dialog-hard-separator-and-apostrophe-fixes_82.stevejs.md  dialog-soft-transition-fix_34.stevejs.md  dialog-state-machine-bug-fix_32.stevejs.md  dialog-state-machine-comprehensive-test-harness_20.stevejs.md  dialog-state-machine-incremental-fix-with-test-harness_21.stevejs.md  dialog-state-machine-over-coalescing-fix_19.stevejs.md  dialog-state-machine-pattern-overlap-fix_83.stevejs.md  dialog-state-machine-performance-optimization_18.stevejs.md  dictionary-abbreviation-strategy-test_17.stevejs.md  documentation-consistency-cleanup_15.stevejs.md  exploration-process-definition_16.stevejs.md  external-punctuation-gap1_86.claude.md  fail-fast-parallel-validation_53.stevejs.md  feature-flag-architecture-cleanup_47.stevejs.md  file-by-file-benchmarking_28.stevejs.md  file-discovery_2.md  fix-debug-state-names_94.stevejs.md  fix-parenthetical-dialog-patterns_84.claude.md  fst-dfa-detector-removal_30.stevejs.md  incremental-processing-implementation_11.md  (+23 more)
docs/: boundary-test-harness.md  cli-ux-specification.md  examples.md  exploration-workflow.md  manual-commands.md  process-improvement-workflow.md  stats-output-format.md  testing-strategy.md  warning-free-compilation.md
exploration/: BAD_SEP_HANDLING.md  FALSE_NEGATIVE_examples.txt  FALSE_POSITIVE_examples.txt  compositional-sentence-boundary-detection-design.md  dialog-state-machine-regex-design.md  dictionary-abbreviation-strategy-comprehensive-checkpoint.md  quality-goals-implementation-checkpoint.md
naming/: .gitignore
scripts/: bootstrap.sh  validate_warning_free.sh
src/: discovery.rs  incremental.rs  lib.rs  main.rs  parallel_processing.rs  reader.rs  restart_log.rs  sentence_detector.rs
tasks/: abbreviation-detection-exploration_14.stevejs.md  benchmark-implementation-audit_25.stevejs.md  benchmark-mmap-feature-removal_48.stevejs.md  benchmark-performance-regression-investigation_22.stevejs.md  cleanup-warnings-post-cache-removal_61.stevejs.md  cli-incremental-api-adoption_46.stevejs.md  cli-pipeline-implementation_10.md  cli-ux-improvements_43.stevejs.md  comprehensive-state-assessment-and-validation_23.stevejs.md  configurable-file-pattern_75.stevejs.md  (+46 more)
(+52 files in other folders)
