[package]
name = "seams"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seams"
path = "src/main.rs"

[lib]
name = "seams"
path = "src/lib.rs"

[build-dependencies]
anyhow = "1.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1.0"
regex-automata = "0.4"
indicatif = "0.17"
memmap2 = "0.9"
glob = "0.3"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["fs"] }
num_cpus = "1.0"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
dotenvy = "0.15"

[features]
default = []
test-helpers = []



[[bench]]
name = "file_by_file_bench"
harness = false

