[package]
name = "seams"
version = "0.1.0"
edition = "2021"
description = "High-throughput sentence extractor for Project Gutenberg texts with dialog-aware detection"
license = "MIT"
repository = "https://github.com/knowseams/knowseams"
homepage = "https://github.com/knowseams/knowseams"
readme = "README.md"
keywords = ["gutenberg", "sentence", "nlp", "text-processing", "cli"]
categories = ["command-line-utilities", "text-processing"]
authors = ["stevejs"]

[[bin]]
name = "seams"
path = "src/main.rs"

[lib]
name = "seams"
path = "src/lib.rs"

[build-dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
regex-automata = "0.4"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1.0"
regex-automata = "0.4"
indicatif = "0.17"
memmap2 = "0.9"
glob = "0.3"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["fs"] }
num_cpus = "1.0"
walkdir = "2.0"
jwalk = "0.8"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
dotenvy = "0.15"

[features]
default = []
test-helpers = []
debug-states = []
table-driven-patterns = []



[[bench]]
name = "file_by_file_bench"
harness = false


