[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seams-benchmarks"
version = "0.1.0"
description = "Python benchmarks for comparing seams sentence segmentation performance"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pysbd>=0.3.4",
    "spacy>=3.4.0",
    "nupunkt>=0.5.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.hatch.build.targets.wheel]
packages = ["benchmarks"]